# internet-connection-checker

./: README.md  main.py  ping.py  pyproject.toml  sp.py  speedtest.csv  speedtest.py
