[tool.poetry]
name = "internet-connection-checker"
version = "0.1.0"
description = "Continously monitors the internet connection and dumps the status into a file"
authors = ["Jonas Manthey"]

[tool.poetry.dependencies]
python = "^3.9"
speedtest-cli = "^2.1.3"
pythonping = "^1.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
